<resources>
    <string name="app_name">HorseJouney</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="rider_zone">Rider</string>
    <string name="horse_zone">Horse</string>
    <string name="instructor_zone">Instructor</string>
    <string name="q_a"><![CDATA[Q&A]]></string>
    <string name="menu_rider">Rider</string>
    <string name="menu_horse">Horse</string>
    <string name="menu_instructor">Instructor</string>
    <string name="fragment_q_and_a"><![CDATA[Q&A]]></string>
    <string name="q_anda"><![CDATA[Q&A]]></string>
    <string name="menu_qanda"><![CDATA[Q&A]]></string>
    <string name="bleeeeeellelele">bleeeeeellelele</string>
</resources>