<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rider"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/rider_zone" />
        <item
            android:id="@+id/nav_horse"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/horse_zone" />
        <item
            android:id="@+id/nav_instructor"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/instructor_zone" />
        <item
            android:id="@+id/nav_qanda"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/q_anda" />
    </group>
</menu>