<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_rider">

    <fragment
        android:id="@+id/nav_rider"
        android:name="com.example.horsejouney.ui.rider.RiderFragment"
        android:label="@string/menu_rider"
        tools:layout="@layout/fragment_rider" />

    <fragment
        android:id="@+id/nav_horse"
        android:name="com.example.horsejouney.ui.horse.HorseFragment"
        android:label="@string/menu_horse"
        tools:layout="@layout/fragment_horse" />

    <fragment
        android:id="@+id/nav_instructor"
        android:name="com.example.horsejouney.ui.instructor.InstructorFragment"
        android:label="@string/menu_instructor"
        tools:layout="@layout/fragment_instrustor" />
    <fragment
        android:id="@+id/nav_qanda"
        android:name="com.example.horsejouney.ui.qanda.QandaFragment"
        android:label="@string/menu_qanda"
        tools:layout="@layout/fragment_qanda" />

</navigation>